// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`assign, reassign, unassign assign 1`] = `
{
  "data": {
    "assign": {
      "__typename": "AssignmentPayload",
      "assignedTo": {
        "__typename": "Worker",
        "displayName": "Will Ruggiano",
      },
      "entity": {
        "__typename": "Checklist",
        "assignees": {
          "__typename": "AssigneeConnection",
          "edges": [
            {
              "__typename": "AssigneeEdge",
              "node": {
                "__typename": "Assignee",
                "assignedTo": {
                  "__typename": "Worker",
                  "displayName": "Will Ruggiano",
                },
              },
            },
          ],
        },
      },
    },
  },
}
`;

exports[`assign, reassign, unassign reassign 1`] = `
{
  "data": {
    "assign": {
      "__typename": "AssignmentPayload",
      "assignedTo": {
        "__typename": "Worker",
        "displayName": "Mike Heavner",
      },
      "entity": {
        "__typename": "Checklist",
        "assignees": {
          "__typename": "AssigneeConnection",
          "edges": [
            {
              "__typename": "AssigneeEdge",
              "node": {
                "__typename": "Assignee",
                "assignedTo": {
                  "__typename": "Worker",
                  "displayName": "Mike Heavner",
                },
              },
            },
          ],
        },
      },
    },
  },
}
`;

exports[`assign, reassign, unassign unassign 1`] = `
{
  "data": {
    "unassign": {
      "__typename": "UnassignmentPayload",
      "entity": {
        "__typename": "Checklist",
        "assignees": {
          "__typename": "AssigneeConnection",
          "edges": [],
        },
      },
      "unassignedFrom": {
        "__typename": "Worker",
        "displayName": "Mike Heavner",
      },
    },
  },
}
`;
